# cyberspace

./: .gitignore  LICENSE  README.md  cyberspace.spec  pyproject.toml
.github/workflows/: release.yml
cyberspace/: __init__.py  __main__.py  cli.py  config.py  credentials.py  host.py  memory.py  projects.py  success.py  swarm.py  tooling.py  uninstall.py  updater.py
cyberspace/agent/: __init__.py  config.py  core.py  llm.py  providers.py  setup.py
cyberspace/brain/: __init__.py  acquire.py  brain.py  criteria.py  executor.py  module.py  planner.py  playbook.py
cyberspace/cyberdeck/: __init__.py  acquire.py  criteria.py  cyberdeck.py  executor.py  module.py  planner.py  playbook.py  prompts.py
cyberspace/modules/: __init__.py  base.py  registry.py
cyberspace/ui/: __init__.py  dashboard.py
installer/: install-launcher.sh  install.ps1  install.sh
installer/docker/: Dockerfile
installer/rpi-build/: README.md
tests/: test_brain.py  test_credentials.py  test_cyberdeck.py  test_cyberdeck_prompts.py  test_e_tool.py  test_fast_agent_swarm.py  test_iceberg_spoof.py  test_installation.py  test_kill_chain.py  test_platform.py  test_privacy.py  test_robodaddy.py  test_robodaddy_guided.py  test_robodaddy_parameters.py  test_robodaddy_workflow.py  test_secure_tool.py  test_success_criteria.py  test_tooling_runtime_update.py  test_trainababy.py
