[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberspace"
version = "0.9.2"
description = "cyberspace - an agentic security lab platform with scoped tool agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "cyberspace contributors" }]
keywords = ["security", "pentest", "comptia", "kali", "agent", "llm", "oscp"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "pyserial>=3.5",
    "requests>=2.31",
    "pysocks>=1.7",
    "beautifulsoup4>=4.12",
    "keyring>=25.0",
    "SecretStorage>=3.3; sys_platform == 'linux'",
    "playwright>=1.45",
]

[project.optional-dependencies]
ui = ["textual>=0.60"]
gui = ["streamlit>=1.30"]
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
cyberspace = "cyberspace.cli:app"
cs = "cyberspace.cli:app"

[project.urls]
Homepage = "https://github.com/nim2natty/cyberspace"
Issues = "https://github.com/nim2natty/cyberspace/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyberspace*"]

[tool.setuptools.package-data]
"cyberspace.platforms.iceberg" = ["spoof/*.js", "data/*.html"]
